--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,20 @@ li {
 	padding: 10px;
 
 }
+
+/*article*/
+
+#cadre_article {
+	border: 170px solid transparent;
+	background-image: url(http://jolstatic.fr/dofus/equipe/403024/ornements/elementaire.PNG);
+	background-attachment: scroll;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 1000px;
+}
+
+#titre_article{
+	text-align: center; 
+	font-family: 'Indie Flower', cursive; 
+	font-size: 100px;
+}
