--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ li {
     background-color: #CECECE;
 	opacity: 0.9;
     text-align: center;
+    line-height: 15px;
 }
 
 #espace {
@@ -245,7 +246,7 @@ li {
 
 /*article*/
 
-#cadre_article {
+#cadre_article1_29 {
 	border: 150px solid transparent;
 	background-image: url(http://jolstatic.fr/dofus/equipe/403024/ornements/elementaire.PNG);
 	background-attachment: scroll;
@@ -254,7 +255,7 @@ li {
 	background-size: 850px;
 }
 
-#titre_article{
+#titre_article1_29 {
 	text-align: center; 
 	font-family: 'Indie Flower', cursive; 
 	font-size: 90px;
